--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
             <ul class="lista-menu">
                 <li class="lista-menu__titulo">Categorias</li>
                 <li class="lista-menu__item">
-                    <a href="#" class="lista-menu__link">Programação</a>
+                    <a href="#" class="lista-menu__link">Romance</a>
                 </li>
                 <li class="lista-menu__item">
-                    <a href="#" class="lista-menu__link">Front-end</a>
+                    <a href="#" class="lista-menu__link">Fantasia</a>
                 </li>
                 <li class="lista-menu__item">
-                    <a href="#" class="lista-menu__link">Infraestrutura</a>
+                    <a href="#" class="lista-menu__link">Ficção científica</a>
                 </li>
                 <li class="lista-menu__item">
                     <a href="#" class="lista-menu__link">Business</a>
